Content update, fixing button alignment in header, using round instead of floor for random calcs

--- a/src/components/Navigation/styles.css
+++ b/src/components/Navigation/styles.css
@@ -17,6 +17,14 @@ minimum button size 48x48 for Accessibility / SEO reasons, with 8px between the 
     margin-right: 8px;
 }
 
+.navigation__list-item:first-of-type a {
+    justify-content: end;
+}
+
+.navigation__list-item:last-of-type {
+    margin-right: 0;
+}
+
 .navigation__link {
     display: inline-flex;
     color: inherit;
